@@ -12,8 +12,10 @@ git-core (1:1.6.0-0) experimental; urgency=low
   * 0002-bug-438793-git-sh-setup.sh-builtin-tag.c-fallback.diff: redo
     as 0002-bug-438793-494505-fallback-to-editor-not-vi.diff (thx
     Jonathan Nieder for the patch, closes: #494505).
+  * debian/rules: add gitexecdir=/usr/lib/git-core to OPTS; adapt
+    several paths (thx Jonathan Nieder for a patch, closes: #480396).
 
- -- Gerrit Pape <pape@smarden.org>  Sun, 17 Aug 2008 21:36:05 +0000
+ -- Gerrit Pape <pape@smarden.org>  Sun, 17 Aug 2008 22:50:36 +0000
 
 git-core (1:1.5.6.3-1) unstable; urgency=low
 
